<resources>
    <string name="app_name">Bad Pixel Search</string>
    <string name="info">Swipe on screen to change color</string>
    <string name="version">App Version:</string>
    <string name="build">Build</string>
    <string name="dot">…</string>
    <string name="get_started">START</string>
    <string name="walkthrough_text_one">Carefully wipe the screen of your phone or tablet with a soft cloth or napkin to remove dirt, dust, grease spots, and other contaminants.</string>
    <string name="walkthrough_text_two">Start application.</string>
    <string name="walkthrough_text_three">Simply swipe left or right to go to the next color or previous color.</string>
    <string name="walkthrough_text_four">Watch the screen closely for any inconsistencies in each color. During normal operation, all pixels should display the same color. If a pixel\'s color differs, it may be a "dead" or "stuck" pixel.</string>
    <string name="double_tap_info">For usage information click here</string>
    <string name="button_close_fix">Close</string>
    <string name="click_me">Click here to show information about the new feature, or swipe to start the pixel checker</string>
    <string name="start_fix_tool">Start fix tool</string>
    <string name="restart">Restart</string>
    <string name="send">Click on the button below to send a localization request in your desired language</string>
    <string name="send_req">REQUEST</string>
    <string name="choose_mail_app">Choose Mail App</string>
    <string name="to">rptechnologies.info@gmail.com</string>
    <string name="automatic">Automatic mode</string>
    <string name="settings">SETTINGS</string>
    <string name="settings_t">SETTINGS</string>
    <string name="speed">Scrolling speed</string>
    <string name="normal">Normal</string>
    <string name="fast">Fast</string>
    <string name="help">By activating the automatic mode the app will scroll through the test colours, to activate it click on the button at the bottom, choose the scrolling speed, return to this screen and swipe to the right to start.</string>
    <string name="interval">Automatic mode duration</string>
    <string name="min">m</string>
    <string name="hour">h</string>
    <string name="fix">Fix Mode</string>
    <string name="brightness">Brightness</string>
    <string name="text_delay">Delay</string>
    <string name="faq">FAQ</string>
    <string name="faq_menu">FAQ</string>
    <string name="faq_a">A:</string>
    <string name="faq_q">Q:</string>
    <string name="faq_question_1">How to use this app?</string>
    <string name="faq_answer_1">Carefully wipe the screen of your phone or tablet with a soft cloth or napkin to remove dirt, dust, grease spots, and other contaminants.</string>
    <string name="faq_question_2">How to search dead or broken pixel?</string>
    <string name="faq_answer_2">Simply swipe left or right to go to the next color or previous color.</string>
    <string name="faq_question_3">Are there other modes of use?</string>
    <string name="faq_answer_3">In the main menu you can choose the type of test to perform, for each type a secondary menu will open where you can choose the specific test</string>
    <string name="faq_question_4">Where can I find information about my device?</string>
    <string name="faq_answer_4">By clicking on the menu at the top right you can see information about the device, the screen and its sensors.</string>
    <string name="faq_question_5">How does the automatic bad pixel search work?</string>
    <string name="faq_answer_5">By activating the fix mode, we will manipulate the screen to attempt to restore broken pixels. We recommend using this mode for at least 10 minutes, or even several hours for better results.\nWarning: Do not look at the screen during this mode.\nBattery consumption may increase; it is recommended to have the battery at 100% or connected to a charger.\nTo stop this function, close the app or press the back button.</string>
    <string name="screen_info">SCREEN INFO</string>
    <string name="touch">Press back button to stop tests</string>
    <string name="choose">In this menu, choose the desired search option</string>
    <string name="full_resolution">Full Resolution (px)</string>
    <string name="current_resolution">Current Resolution (px)</string>
    <string name="visual_resolution">Visual Resolution (px)</string>
    <string name="screen_scale">Screen Scale</string>
    <string name="pixel_density">Pixel Density</string>
    <string name="screen_size">Screen Size</string>
    <string name="refresh_rate">Refresh Rate</string>
    <string name="screen_type">Screen Type</string>
    <string name="aspect_ratio">Aspect Ratio</string>
    <string name="screen_brightness">Screen Brightness</string>
    <string name="wide_color_gamut">Wide Color Gamut</string>
    <string name="hdr_screen">HDR Screen</string>
    <string name="pixel_format">Pixel Format</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unknown">Unknown espect ratio</string>
    <string name="automaticMode">Automatic</string>
    <string name="manualMode">Manual</string>
    <string name="start">START</string>
    <string name="back">Click on the button to return to the menu</string>
    <string name="goBack">BACK</string>
    <string name="slide">Swipe left or right to start your search\nSelected option $1</string>
    <string name="background">background</string>
    <string name="arrow">arrow</string>
    <string name="question">question</string>
    <string name="screen_info_title">Screen Info</string>
    <string name="add_language_to_app">Add Language To App</string>
    <string name="message">Message</string>
    <string name="img">img</string>
    <string name="_1_mins">1m</string>
    <string name="_5_mins">5m</string>
    <string name="_15_mins">15m</string>
    <string name="_30_mins">30m</string>
    <string name="_1_hour">60m</string>
    <string name="type">Type</string>
    <string name="color_loop">Color Loop</string>
    <string name="black_and_white">Black And White</string>
    <string name="noise">Noise</string>
    <string name="horizontal_line">Horizontal Line</string>
    <string name="vertical_line">Vertical Line</string>
    <string name="horizontal_rectangle">Horizontal rectangle</string>
    <string name="vertical_rectangle">Vertical rectangle</string>
    <string name="device_info">DEVICE INFO</string>
    <string name="device_info_title">Device Information</string>
    <string name="model">Model</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="productor">Product</string>
    <string name="device">Device</string>
    <string name="brand">Brand</string>
    <string name="board">Board</string>
    <string name="hardware">Hardware</string>
    <string name="architecture">Architecture</string>
    <string name="cpu">CPU ABI</string>
    <string name="device_id">Device ID</string>
    <string name="display">Display</string>
    <string name="android">Android</string>
    <string name="sdk">SDK</string>
    <string name="answer">Answer</string>
    <string name="green_screen">Green Screen</string>
    <string name="gradient">GRADIENT</string>
    <string name="white">White</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="magenta">Magenta</string>
    <string name="cyan">Cyan</string>
    <string name="yellow">Yellow</string>
    <string name="gray">Gray</string>
    <string name="other">Other Apps</string>
    <string name="name">APP</string>
    <string name="other_apps">OTHER APPS</string>
    <string name="threed">3D TEST</string>
    <string name="noise_colored">Changeable Snowflakes</string>
    <string name="open_menu">Menu</string>
    <string name="app_menu">Menu</string>
    <string name="two">2D TEST</string>
    <string name="fps_0">FPS: 0</string>
    <string name="fps">FPS: </string>
    <string name="cpu_0">CPU: 0%</string>
    <string name="gpu_load_0">GPU Load: 0%</string>
    <string name="cpu_test">CPU: </string>
    <string name="gpu_load">GPU Load: </string>
    <string name="color_tests">COLOR TESTS</string>
    <string name="animation_test">ANIM. TESTS</string>
    <string name="system_fonts">SYSTEM FONTS</string>
    <string name="system_fonts_title">SYSTEM FONTS - CHARACTERS</string>
    <string name="rgb_colors">RGB COLORS</string>
    <string name="camera_test">CAMERA TESTS</string>
    <string name="screen_sensor">SENSOR</string>
    <string name="animation_test_full">ANIMATION TESTS</string>
    <string name="two_gravity">2D GRAVITY</string>
    <string name="three_gravity">3D GRAVITY</string>
    <string name="moving_bars">MOVING BARS</string>
    <string name="rotation">ROTATION TEST</string>
    <string name="display_fps_0">DISPLAY FPS: 0</string>
    <string name="display_fps">Display FPS: </string>
    <string name="purity">PURITY</string>
    <string name="scales">SCALES</string>
    <string name="shades">SHADES</string>
    <string name="gamma_test">GAMMA TEST</string>
    <string name="line_test">LINE TEST</string>
    <string name="dead_pixel_test">DEAD PIXEL TEST</string>
    <string name="normal_fonts">NORMAL FONTS</string>
    <string name="italic_fonts">ITALIC FONTS</string>
    <string name="bold_fonts">BOLD FONTS</string>
    <string name="bold_italic_fonts">BOLD-ITALIC FONTS</string>
    <string name="font_families">FONT FAMILIES</string>
    <string name="reading_test">READING TEST</string>
    <string name="camera_tests">CAMERA TESTS</string>
    <string name="camera1">CAMERA 1</string>
    <string name="camera2">"CAMERA 2 "</string>
    <string name="fix_tests">FIX PIXELS</string>
    <string name="bw_test"><![CDATA[BLACK & WHITE TEST]]></string>
    <string name="noise_test">NOISE TEST</string>
    <string name="snow">SNOWFLAKES</string>
    <string name="horizontal_line_test">HORIZONTAL LINE</string>
    <string name="vertical_line_test">VERTICAL LINE</string>
    <string name="hori_rect_test">HORIZONTAL RECTANGLE</string>
    <string name="vertical_rectangle_test">VERTICAL RECTANGLE</string>
    <string name="fix_test">FIX</string>
    <string name="gray_text">Gray text</string>
    <string name="xsmall">Xsmall</string>
    <string name="text_1">abcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyz</string>
    <string name="text_1_cap">ABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="text_numb_symbol"><![CDATA[0123456789012345678901234567890123456789012345678901234 @ # $ % ^ & | = . - _ ! ? , ( ) + - * < > / \\]]></string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="white_text">White Text</string>
    <string name="red_text">Red Text</string>
    <string name="green_text">Green Text</string>
    <string name="blue_text">Blue Text</string>
    <string name="magenta_text">Magenta Text</string>
    <string name="cyan_text">Cyan Text</string>
    <string name="yellow_text">Yellow Text</string>
    <string name="calibri">Calibri</string>
    <string name="open_sans">Sans-serif</string>
    <string name="kanit">Kanit</string>
    <string name="cursive">Cursive</string>
    <string name="baloo">Baloo</string>
    <string name="monospace">Monospace</string>
    <string name="bold_monospace">Bold Monospace</string>
    <string name="muhaqu">Sans-serif-condensed</string>
    <string name="calibir_light">Calibri-light</string>
    <string name="sans">Sans-serif</string>
    <string name="sans_small">Sans-serif-smallcaps</string>
    <string name="sans_thin">Sans-serif-thin</string>
</resources>